@@ -61,6 +61,12 @@ Python/C API
 - Py_BuildValue() now has a "D" conversion to create a Python complex
   number from a Py_complex C value.
 
+- Extensions types which support weak references must now set the
+  field allocated for the weak reference machinery to NULL themselves;
+  this is done to avoid the cost of checking each object for having a
+  weakly referencable type in PyObject_INIT(), since most types are
+  not weakly referencable.
+
 Distutils
 
 - the sdist command now writes a PKG-INFO file, as described in PEP 241,
